Fix layout shift for image load

--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -23,6 +23,7 @@ landing-page {
 
 .profile-image {
   width: 100%;
+  height: auto;
 }
 
 section {
